--- a/src/shameButton.css
+++ b/src/shameButton.css
@@ -64,17 +64,22 @@
 		border-left: 1vw black solid;
 		border-right: 1vw black solid;
 }
-	
-.shame-button--proceed {
-		background: #f7d51d;
-		box-shadow: inset -0.33vw -0.33vw 0px 0px #e59400;
+
+.shake{
+	animation: shake 0.5s;
+	animation-iteration-count: infinite; 
 }
-	
-.shame-button--proceed:hover, .shame-button--proceed:focus {
-		background: #f2c409;
-		box-shadow: inset -0.5vw -0.5vw 0px 0px #e59400;
-}
-	
-.shame-button--proceed:active {
-		box-shadow: inset 0.33vw 0.33vw 0px 0px #e59400;
+
+@keyframes shake {
+    0% { transform: translate(-50%, -50%) translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-50%, -50%) translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-50%, -50%) translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(-50%, -50%) translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(-50%, -50%) translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-50%, -50%) translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-50%, -50%) translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(-50%, -50%) translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-50%, -50%) translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(-50%, -50%) translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(-50%, -50%) translate(1px, -2px) rotate(-1deg); }
 }
