--- a/src/Components/shameButton.css
+++ b/src/Components/shameButton.css
@@ -1,73 +1,69 @@
-.shame-button-content {
-		position:absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		
-		font-family: 'VT323', Courier, monospace;
-		font-size: 10vw;
 
-		-webkit-user-select: none; /* Safari */        
-		-moz-user-select: none; /* Firefox */
-		-ms-user-select: none; /* IE10+/Edge */
-		user-select: none; /* Standard */
-}
-	
 .shame-button {
-		background: #f7d51d;
-  
-		position:absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		
-		width: 30vw;
-		height: 15vw;
-		min-width: 100px;
-		min-height: 100px;
-		
-		box-shadow: inset -0.66vw -0.66vw 0px 0px #e59400;
+	background: #f7d51d;
 
-		-moz-transition: top .5s ease;
-		-webkit-transition: top .5s ease;
-		-o-transition: top .5s ease;
-		transition: top .5s ease;
+	position:absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	
+	width: 20vw;
+	height: 45vh;
+	min-width: 100px;
+	min-height: 100px;
+	
+	box-shadow: inset -0.66vw -0.66vw 0px 0px #e59400;
+
+	-moz-transition: top .5s ease;
+	-webkit-transition: top .5s ease;
+	-o-transition: top .5s ease;
+	transition: top .5s ease;
 }
 	
 .shame-button:hover, .shame-button:focus {
-		background: #f2c409;
-		box-shadow: inset -1vw -1vw 0px 0px #e59400;
+	background: #f2c409;
+	box-shadow: inset -1vw -1vw 0px 0px #e59400;
 }
 	
 .shame-button:active {
-		box-shadow: inset 0.66vw 0.66vw 0px 0px #e59400;
+	box-shadow: inset 0.66vw 0.66vw 0px 0px #e59400;
 }
 	
 .shame-button:before, .shame-button:after {
-		content: '';
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		box-sizing: content-box;
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	box-sizing: content-box;
 }
 	
 .shame-button:before {
-		top: -1vw;
-		left: 0;
-		border-top: 1vw black solid;
-		border-bottom: 1vw black solid;
+	top: -1vw;
+	left: 0;
+	border-top: 1vw black solid;
+	border-bottom: 1vw black solid;
+
 }
 
 .shame-button:after {
-		left: -1vw;
-		top: 0;
-		border-left: 1vw black solid;
-		border-right: 1vw black solid;
+	left: -1vw;
+	top: 0;
+	border-left: 1vw black solid;
+	border-right: 1vw black solid;
 }
 
 .shake{
 	animation: shake 0.5s;
 	animation-iteration-count: infinite; 
+}
+
+.shame-button-content{
+	position: relative;
+	top: 80%;
+	width: 50%;
+	padding-top: 50%;
+	background: red;
+	border-radius: 50%;
 }
 
 @keyframes shake {
@@ -82,4 +78,10 @@
     80% { transform: translate(-50%, -50%) translate(-1px, -1px) rotate(1deg); }
     90% { transform: translate(-50%, -50%) translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(-50%, -50%) translate(1px, -2px) rotate(-1deg); }
+}
+
+@media (orientation: landscape) {
+	.shame-button{
+		height: 45vw;
+	}
 }
